--- a/GUILayer/Reportes/Diseño/ListadoCoberturas.rdlc
+++ b/GUILayer/Reportes/Diseño/ListadoCoberturas.rdlc
@@ -500,14 +500,25 @@
           </Border>
         </Style>
       </Tablix>
+      <Line Name="Line2">
+        <Top>4.7975cm</Top>
+        <Height>0cm</Height>
+        <Width>30.14919cm</Width>
+        <ZIndex>1</ZIndex>
+        <Style>
+          <Border>
+            <Style>Solid</Style>
+          </Border>
+        </Style>
+      </Line>
     </ReportItems>
-    <Height>2in</Height>
+    <Height>1.95in</Height>
     <Style />
   </Body>
   <Width>11.86976in</Width>
   <Page>
     <PageHeader>
-      <Height>2.54cm</Height>
+      <Height>2.75053cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -532,9 +543,8 @@
           </Paragraphs>
           <rd:DefaultName>Textbox17</rd:DefaultName>
           <Top>0.85937cm</Top>
-          <Left>1.32503cm</Left>
           <Height>0.6cm</Height>
-          <Width>15.30583cm</Width>
+          <Width>30.14919cm</Width>
           <Style>
             <Border>
               <Style>None</Style>
@@ -546,6 +556,17 @@
             <PaddingBottom>2pt</PaddingBottom>
           </Style>
         </Textbox>
+        <Line Name="Line1">
+          <Top>2.3622cm</Top>
+          <Height>0cm</Height>
+          <Width>30.14919cm</Width>
+          <ZIndex>1</ZIndex>
+          <Style>
+            <Border>
+              <Style>Solid</Style>
+            </Border>
+          </Style>
+        </Line>
       </ReportItems>
       <Style>
         <Border>
@@ -554,7 +575,7 @@
       </Style>
     </PageHeader>
     <PageFooter>
-      <Height>2.54cm</Height>
+      <Height>1.6287cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -573,7 +594,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox15</rd:DefaultName>
-          <Top>1.0287cm</Top>
+          <Top>0.4572cm</Top>
           <Left>26.5557cm</Left>
           <Height>0.6cm</Height>
           <Width>3.21967cm</Width>
@@ -602,7 +623,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox16</rd:DefaultName>
-          <Top>1.0287cm</Top>
+          <Top>0.4572cm</Top>
           <Left>0.62653cm</Left>
           <Height>0.6cm</Height>
           <Width>3.62183cm</Width>
