--- a/GUILayer/Reportes/Diseño/ListadoProfesionales.rdlc
+++ b/GUILayer/Reportes/Diseño/ListadoProfesionales.rdlc
@@ -236,14 +236,25 @@
           </Border>
         </Style>
       </Tablix>
+      <Line Name="Line2">
+        <Top>4.02167cm</Top>
+        <Height>0cm</Height>
+        <Width>16.51cm</Width>
+        <ZIndex>1</ZIndex>
+        <Style>
+          <Border>
+            <Style>Solid</Style>
+          </Border>
+        </Style>
+      </Line>
     </ReportItems>
-    <Height>2in</Height>
+    <Height>1.7in</Height>
     <Style />
   </Body>
   <Width>6.5in</Width>
   <Page>
     <PageHeader>
-      <Height>2.54cm</Height>
+      <Height>2.98309cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -270,7 +281,7 @@
           <Top>1.1557cm</Top>
           <Left>0.41487cm</Left>
           <Height>0.6cm</Height>
-          <Width>15.2635cm</Width>
+          <Width>15.60216cm</Width>
           <Style>
             <Border>
               <Style>None</Style>
@@ -282,6 +293,17 @@
             <PaddingBottom>2pt</PaddingBottom>
           </Style>
         </Textbox>
+        <Line Name="Line1">
+          <Top>2.38309cm</Top>
+          <Height>0cm</Height>
+          <Width>16.51cm</Width>
+          <ZIndex>1</ZIndex>
+          <Style>
+            <Border>
+              <Style>Solid</Style>
+            </Border>
+          </Style>
+        </Line>
       </ReportItems>
       <Style>
         <Border>
@@ -290,7 +312,7 @@
       </Style>
     </PageHeader>
     <PageFooter>
-      <Height>2.54cm</Height>
+      <Height>1.73567cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -309,7 +331,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox7</rd:DefaultName>
-          <Top>1.32503cm</Top>
+          <Top>0.66886cm</Top>
           <Left>13.51703cm</Left>
           <Height>0.6cm</Height>
           <Width>2.5cm</Width>
@@ -338,7 +360,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox8</rd:DefaultName>
-          <Top>1.32503cm</Top>
+          <Top>0.66886cm</Top>
           <Left>0.41487cm</Left>
           <Height>0.6cm</Height>
           <Width>3.7065cm</Width>
