arregla consulta en reporte estadístico de tipos de afiliado

--- a/GUILayer/Reportes/Diseño/EstadisticaTiposAfiliado.rdlc
+++ b/GUILayer/Reportes/Diseño/EstadisticaTiposAfiliado.rdlc
@@ -299,7 +299,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>Reporte Estadístico de Porcentaje de Tipos de Afiliado </Value>
+                  <Value>Reporte Estadístico de Tipos de Afiliado </Value>
                   <Style>
                     <FontSize>12pt</FontSize>
                     <FontWeight>Bold</FontWeight>
